# fingerjoin

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  devenv.nix
.github/workflows/: ci.yml  helm.yml
chart/fingerjoin/: Chart.yaml  values.yaml
chart/fingerjoin/templates/: common.yaml
src/: backend.rs  error.rs  http.rs  k8s.rs  main.rs  webfinger.rs
