[package]
name = "fingerjoin"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["form"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
kube = { version = "3", features = ["runtime", "client", "ws", "derive"] }
k8s-openapi = { version = "0.27", features = ["v1_31"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "2"
url = "2"
futures = "0.3"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
http = "1"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"